--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <li><a href="#home" onclick="toggleMenu();">Home</a></li>
 <li><a href="#about" onclick="toggleMenu();">About</a></li>
 <li><a href="#services" onclick="toggleMenu();">Services</a></li>
-<li><a href="#testimonial" onclick="toggleMenu();">Testimonials</a></li>
 <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
 </ul>
 </header>
@@ -35,7 +34,7 @@
   <div class="contentbox">
     <h3>I am currently pursuing B.E Degree</h3>
     
-      <br><br>Enjoy !
+      <br><br>I have high knowledge in Html,CSS , Javascript and know some basics in Angular and react. I am a quick and passionate learner
   </div>
   <div class="w50">
     <img src="https://github.com/JackCree/CSSexercices/blob/main/Responsive-web-design-landing-page-01/foots.jpg?raw=true" class="img"> 
@@ -51,21 +50,21 @@
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-laptop-code"></i></div>
     <h2>HTML</h2>
-    <p>Lorem ipsum dolor sit amet...</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nostrum at accusantium maiores quibusdam exercitationem tempore facere placeat nam blanditiis consequuntur tempora corrupti similique, aut, sint, molestias cumque saepe in.</p>
   </div> 
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-file-code"></i></div>
     <h2>CSS</h2>
-    <p>Lorem ipsum dolor sit amet...</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti tempore nisi omnis. Quod, ea ipsam quia praesentium tempora accusamus possimus nobis maxime aliquid placeat omnis, laborum corporis aliquam porro.</p>
   </div> 
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-database"></i></div>
     <h2>Javascript</h2>
-    <p>Lorem ipsum dolor sit amet...</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, velit placeat iure quod tenetur autem excepturi, aliquid sit est magnam laborum nostrum, error aperiam at ducimus officiis odio a eos.</p>
   </div> 
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-edit"></i></div>
-    <h2>Graphism</h2>
+    <h2>Angular</h2>
     <p>Lorem ipsum dolor sit amet...</p>
   </div> 
   <div class="servicesbox">
@@ -83,32 +82,18 @@
 </div>
 <div class="content">
   <div class="workbox">
-    <a href="https://codepen.io/quentin-feret/pen/PoNzxYQ" target="_blank"><img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg" alt="project"></a>
+    <a href="https://codepen.io/vikramanp/pen/jOeZqRM" target="_blank"><img src="Passgenerator.jpg" height="400px" width="500px"></a>
   </div>
   <div class="workbox">
-    <a href="https://codepen.io/quentin-feret/pen/PoNzxYQ" target="_blank"><img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg" alt="project"></a>
+    <a href="https://codepen.io/vikramanp/pen/oNaExRQ" target="_blank"><img src="rockpaperscissors.jpg" alt="project" height="400px
+      " width="500px"></a>
   </div>
 </div>
 <div class="heading">
   <a href="#" class="btn">View more</a>
 </div>
 </section>
-<section class="testimonials" id="testimonial">
-<div class="heading">
-  <h2>Testimonials</h2>
-  <p>Lol you think they are true ?...</p>
-</div>
-<div class="content">
-<div class="testimonialbox">
-  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book..</p>
-  <h3>Someone Famous<br><span>Creative Designer</span></h3>
-</div>
-<div class="testimonialbox">
-  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-  <h3>Someone Famous<br><span>Creative Designer</span></h3>
-</div>
-</div>
-</section>
+
 <section class="contact" id="contact">
 <div class="heading white">
   <h2>Contact Me</h2>
@@ -118,24 +103,18 @@
   <div class="contactinfo">
     <h3>Contact Informations</h3>
     <div class="contactinfobox">
-      <div class="box">
-        <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
-        <div class="text">
-          <h3>Adress</h3>
-          <p>Somewhere between Krypton and Earth<br>Moon Avenue<br>999</p>
-        </div>
-      </div>
+
       <div class="box">
         <div class="icon"><i class="fas fa-phone"></i></div>
         <div class="text">
           <h3>Phone</h3>
-          <p>(+33)6 07 08 09 10</p>
+          <p>(+91)9962553361</p>
         </div>
       </div>
       <div class="box">
         <div class="icon"><i class="fas fa-envelope"></i></div>
         <div class="text">
-          <h3>Mail</h3>              <p>quentinjeanferet@gmail.com</p>
+          <h3>Mail</h3>              <p>vikramanp.cse2022@citchennai.net</p>
         </div>
       </div>
     </div>
@@ -152,7 +131,7 @@
 </div>
 </section>
 <div class="copyright">
-Copyright 2020 © Online Tutorials. All Rights Reserved
+Copyright 2023 © All Rights Reserved
 </div>
 <script type="text/javascript">  window.addEventListener('scroll', function(){
 var header= document.querySelector('header');
