--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="text-banner">
   <h2>Hello, I'm <br><span>Vikraman.P</span></h2>
   <h3>I'm learning Front End Web Design.</h3>
-  <a href="#home" class="btn">About Me</a>
+  <a href="#about" class="btn">About Me</a>
 </div>
 </section>
 <section class="about" id="about">
