--- a/index.html
+++ b/index.html
@@ -50,27 +50,38 @@
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-laptop-code"></i></div>
     <h2>HTML</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nostrum at accusantium maiores quibusdam exercitationem tempore facere placeat nam blanditiis consequuntur tempora corrupti similique, aut, sint, molestias cumque saepe in.</p>
+    <p>HTML stands for Hyper Text Markup Language
+      HTML is the standard markup language for creating Web pages
+      HTML describes the structure of a Web page
+      HTML consists of a series of elements
+      HTML elements tell the browser how to display the content</p>
   </div> 
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-file-code"></i></div>
     <h2>CSS</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti tempore nisi omnis. Quod, ea ipsam quia praesentium tempora accusamus possimus nobis maxime aliquid placeat omnis, laborum corporis aliquam porro.</p>
+    <p>CSS stands for Cascading Style Sheets
+      CSS describes how HTML elements are to be displayed on screen, paper, or in other media
+      CSS saves a lot of work. It can control the layout of multiple web pages all at once
+      External stylesheets are stored in CSS files</p>
   </div> 
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-database"></i></div>
     <h2>Javascript</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, velit placeat iure quod tenetur autem excepturi, aliquid sit est magnam laborum nostrum, error aperiam at ducimus officiis odio a eos.</p>
+    <p>JavaScript is a dynamic computer programming language. It is lightweight and most commonly used as a part of web pages, whose implementations allow client-side script to interact with the user and make dynamic pages. It is an interpreted programming language with object-oriented capabilities.</p>
   </div> 
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-edit"></i></div>
     <h2>Angular</h2>
-    <p>Lorem ipsum dolor sit amet...</p>
+    <p>Angular is a development platform, built on TypeScript. As a platform, Angular includes:
+
+      A component-based framework for building scalable web applications
+      A collection of well-integrated libraries that cover a wide variety of features, including routing, forms management, client-server communication, and more
+      A suite of developer tools to help you develop, build, test, and update your code</p>
   </div> 
   <div class="servicesbox">
     <div class="icon"><i class="fas fa-photo-video"></i></div>
     <h2>Video Editing</h2>
-    <p>Lorem ipsum dolor sit amet...</p>
+    <p>A Video Editor is tasked with taking the raw footage shot by a film crew and director and turning it into the final product. This means following an outline, script or shot list and assembling the footage into one cohesive video or film. Often in video and film work, there are many camera angles and takes recorded. </p>
   </div> 
 </div>
 </div>
@@ -108,7 +119,7 @@
         <div class="icon"><i class="fas fa-phone"></i></div>
         <div class="text">
           <h3>Phone</h3>
-          <p>(+91)9962553361</p>
+          <p>(+91)9874653210</p>
         </div>
       </div>
       <div class="box">
